--- a/packages/analytics-js/package.json
+++ b/packages/analytics-js/package.json
@@ -35,7 +35,7 @@
   "homepage": "https://github.com/rudderlabs/rudder-sdk-js/blob/master/README.md",
   "scripts": {
     "clean": "rimraf -rf ./dist && rimraf -rf ./node_modules/.cache && rimraf tsconfig.build.tsbuildinfo",
-    "start": "rollup --config rollup-configs/rollup.config.mjs --watch --environment DEV_SERVER,PROD_DEBUG",
+    "start": "ONLY_IIFE=true rollup --config rollup-configs/rollup.config.mjs --watch --environment DEV_SERVER,PROD_DEBUG",
     "build": "npm run build:browser && npm run build:package",
     "build:browser:modern": "BROWSERSLIST_ENV=modern npm run build:browser",
     "build:browser": "rollup --config rollup-configs/rollup.config.mjs --environment VERSION:$npm_package_version,UGLIFY,PROD_DEBUG,STAGING:$npm_config_staging,ENV:prod",
