--- a/packages/analytics-js/package.json
+++ b/packages/analytics-js/package.json
@@ -43,8 +43,8 @@
     "build:npm:modern": "BROWSERSLIST_ENV=modern rollup --config rollup-configs/rollup.config.mjs --environment VERSION:$npm_package_version,ENV:prod",
     "build:worker": "exit 0",
     "build:package": "npm run build:npm && npm run build:worker",
-    "test": "npm run build:browser && sed 's/var rudderanalytics/rudderanalytics/g' dist/legacy/iife/index.js > __mocks__/cdnSDKv3.js && jest --watchAll=false --detectOpenHandles --forceExit --maxWorkers=50% --coverage",
-    "test:ci": "npm run build:browser && sed 's/var rudderanalytics/rudderanalytics/g' dist/legacy/iife/index.js > __mocks__/cdnSDKv3.js && jest --watchAll=false --detectOpenHandles --forceExit --maxWorkers=2 --coverage",
+    "test": "ONLY_IIFE=true npm run build:browser && sed 's/var rudderanalytics/rudderanalytics/g' dist/legacy/iife/index.js > __mocks__/cdnSDKv3.js && jest --watchAll=false --detectOpenHandles --forceExit --maxWorkers=50% --coverage",
+    "test:ci": "ONLY_IIFE=true npm run build:browser && sed 's/var rudderanalytics/rudderanalytics/g' dist/legacy/iife/index.js > __mocks__/cdnSDKv3.js && jest --watchAll=false --detectOpenHandles --forceExit --maxWorkers=2 --coverage",
     "check:lint": "eslint --ext .js,.ts src -f json -o reports/eslint.json || exit 0",
     "check:size:build": "npm run clean && npm run build:browser && npm run build:package",
     "check:size": "npm run check:size:build && size-limit",
