--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "ramda": "0.28.0",
     "rudder-component-cookie": "0.0.1",
     "serialize-javascript": "6.0.1",
-    "storejs": "^2.0.3",
+    "storejs": "2.0.3",
     "uuid": "8.3.2"
   },
   "devDependencies": {
