chore(monorepo): update deps, add github pr checks for v3

--- a/packages/analytics-v1.1/package.json
+++ b/packages/analytics-v1.1/package.json
@@ -44,7 +44,7 @@
     "check:circular": "madge --circular --extensions js,ts src || exit 0",
     "check:support": "NODE_ENV=production npx browserslist --mobile-to-desktop",
     "check:support:modern": "NODE_ENV=modern npx browserslist --mobile-to-desktop",
-    "check:duplicates": "jscpd src --threshold 5",
+    "check:duplicates": "jscpd src",
     "check:security": "npm audit --recursive --audit-level=high",
     "start:all": "npm run build:integration:all && npm run start",
     "build:browser:dev": "rollup --config rollup-configs/rollup.sdk.browser.mjs",
@@ -75,7 +75,7 @@
     "url": "https://github.com/rudderlabs/rudder-sdk-js.git"
   },
   "dependencies": {
-    "@lukeed/uuid": "2.0.0",
+    "@lukeed/uuid": "2.0.1",
     "@ndhoule/defaults": "2.0.1",
     "@ndhoule/each": "2.0.1",
     "@ndhoule/extend": "2.0.0",
@@ -108,38 +108,38 @@
     "ms": "2.1.3",
     "obj-case": "0.2.1",
     "on-body": "0.0.1",
-    "ramda": "0.28.0",
+    "ramda": "0.29.0",
     "rudder-component-cookie": "0.0.1",
     "serialize-javascript": "6.0.1",
     "storejs": "2.0.3",
     "uuid": "8.3.2"
   },
   "devDependencies": {
-    "@babel/core": "7.21.3",
+    "@babel/core": "7.21.4",
     "@babel/eslint-parser": "7.21.3",
     "@babel/plugin-proposal-class-properties": "7.18.6",
     "@babel/plugin-transform-arrow-functions": "7.20.7",
     "@babel/plugin-transform-object-assign": "7.18.6",
-    "@babel/plugin-transform-runtime": "7.21.0",
-    "@babel/preset-env": "7.20.2",
-    "@babel/preset-typescript": "7.21.0",
+    "@babel/plugin-transform-runtime": "7.21.4",
+    "@babel/preset-env": "7.21.4",
+    "@babel/preset-typescript": "7.21.4",
     "@commitlint/config-conventional": "17.4.4",
     "@commitlint/config-lerna-scopes": "17.4.2",
     "@digitalroute/cz-conventional-changelog-for-jira": "8.0.0",
     "@rollup/plugin-babel": "6.0.3",
     "@rollup/plugin-commonjs": "24.0.1",
     "@rollup/plugin-json": "6.0.0",
-    "@rollup/plugin-node-resolve": "15.0.1",
+    "@rollup/plugin-node-resolve": "15.0.2",
     "@rollup/plugin-replace": "5.0.2",
-    "@rollup/plugin-terser": "0.4.0",
+    "@rollup/plugin-terser": "0.4.1",
     "@size-limit/file": "8.2.4",
     "@size-limit/webpack": "8.2.4",
     "@types/component-emitter": "1.2.11",
     "@types/jest": "29.5.0",
     "@types/ramda": "0.28.23",
     "@types/uuid": "8.3.4",
-    "@typescript-eslint/eslint-plugin": "5.57.0",
-    "@typescript-eslint/parser": "5.57.0",
+    "@typescript-eslint/eslint-plugin": "5.57.1",
+    "@typescript-eslint/parser": "5.57.1",
     "assert": "2.0.0",
     "babel-eslint": "10.1.0",
     "babel-plugin-transform-object-hasown": "1.1.0",
@@ -148,13 +148,13 @@
     "conventional-changelog-cli": "2.2.2",
     "conventional-github-releaser": "3.1.5",
     "dotenv": "16.0.3",
-    "eslint": "8.37.0",
+    "eslint": "8.38.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-airbnb-typescript": "17.0.0",
     "eslint-config-prettier": "8.8.0",
-    "eslint-import-resolver-typescript": "3.5.4",
-    "eslint-plugin-compat": "4.1.2",
+    "eslint-import-resolver-typescript": "3.5.5",
+    "eslint-plugin-compat": "4.1.4",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-sonarjs": "0.19.0",
     "eslint-plugin-unicorn": "46.0.0",
@@ -169,7 +169,7 @@
     "jest-sonar": "0.2.15",
     "jest-watch-typeahead": "2.2.2",
     "jscpd": "3.5.4",
-    "lint-staged": "13.2.0",
+    "lint-staged": "13.2.1",
     "madge": "6.0.0",
     "msw": "1.2.1",
     "patch-package": "6.5.1",
@@ -186,7 +186,7 @@
     "rollup-plugin-visualizer": "5.9.0",
     "size-limit": "8.2.4",
     "standard-version": "9.5.0",
-    "ts-jest": "29.0.5",
+    "ts-jest": "29.1.0",
     "tslib": "2.5.0",
     "typescript": "4.9.5"
   },
