fix: bugsnag error reporting (#856)
* fix: fix Bugsnug version detection & error reporting initialization

* fix: remove node assert import

* refactor: rename folder for error reporting feature

* chore: use case handled

* chore: fix circular dependency

* chore: update size limit

* test: error reporting service test suite

* test: test suite for bugsnag

* chore: updated method signatures for v6 bugsnag

* fix: address pr comments

* fix: use the latest config key for error reports

* fix: remove the default value for error collection

* fix: rename config flags in test scripts to fix failures

* chore: add more test cases to improve coverage

* fix: allow only boolean values for error collection enable flag

* refactor: remove redundant code

* refactor: remove redundant client check

* refactor: fix the typo

* fix: update package-lock.json to latest

---------

Co-authored-by: Moumita <mandal.moumita2013@gmail.com>
Co-authored-by: Moumita <36885121+MoumitaM@users.noreply.github.com>
Co-authored-by: saikumarrs <saibattinoju@rudderstack.com>

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -36,16 +36,12 @@ jobs:
       - name: Build files
         env:
           HUSKY: 0
+          BUGSNAG_API_KEY: ${{ secrets.RS_DEV_BUGSNAG_API_KEY }}
+          BUGSNAG_RELEASE_STAGE: 'development'
         run: |
           npm ci
           npm run build:browser:dev
           npm run build:integration:all
-
-      - name: Fix Bugsnag API key
-        env:
-          BUGSNAG_API_KEY: ${{ secrets.RS_DEV_BUGSNAG_API_KEY }}
-        run: |
-          sed -i -e 's|{{RS_BUGSNAG_API_KEY}}|'$BUGSNAG_API_KEY'|' dist/legacy/rudder-analytics.js
 
       - name: Sync files to S3
         run: |
