--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "setup": "npm i && cd sanity-suite && npm i",
     "test": "npm run build:browser && sed 's/var rudderanalytics/rudderanalytics/g' dist/legacy/rudder-analytics.min.js > __tests__/prodsdk.js && jest --watchAll=false --maxWorkers=50% --coverage",
     "test:ci": "npm run build:browser && sed 's/var rudderanalytics/rudderanalytics/g' dist/legacy/rudder-analytics.min.js > __tests__/prodsdk.js && jest --watchAll=false --maxWorkers=2 --coverage",
-    "start": "rollup --config rollup-configs/rollup.sdk.browser.js --watch --environment DEV_SERVER",
-    "start:all": "npm run build:integration:all && rollup --config rollup-configs/rollup.sdk.browser.js --watch --environment DEV_SERVER",
+    "start": "rollup --config rollup-configs/rollup.sdk.browser.js --watch --environment DEV_SERVER,PROD_DEBUG:inline",
+    "start:all": "npm run build:integration:all && rollup --config rollup-configs/rollup.sdk.browser.js --watch --environment DEV_SERVER,PROD_DEBUG:inline",
     "build:browser:dev": "rollup --config rollup-configs/rollup.sdk.browser.js",
     "build:browser": "rollup --config rollup-configs/rollup.sdk.browser.js --environment VERSION:$npm_package_version,UGLIFY,PROD_DEBUG,STAGING:$npm_config_staging,ENV:prod",
     "build:browser:modern": "BROWSERSLIST_ENV=modern rollup --config rollup-configs/rollup.sdk.browser.js --environment VERSION:$npm_package_version,UGLIFY,PROD_DEBUG,STAGING:$npm_config_staging,ENV:prod",
@@ -119,6 +119,7 @@
     "@size-limit/file": "8.2.4",
     "@size-limit/webpack": "8.2.4",
     "babel-eslint": "10.1.0",
+    "babel-jest": "^29.4.3",
     "babel-plugin-transform-object-hasown": "1.1.0",
     "commitizen": "4.3.0",
     "commitlint": "17.5.1",
@@ -152,7 +153,7 @@
     "rollup-plugin-filesize": "10.0.0",
     "rollup-plugin-generate-html-template": "1.7.0",
     "rollup-plugin-livereload": "2.0.5",
-    "rollup-plugin-polyfill-node": "^0.12.0",
+    "rollup-plugin-polyfill-node": "0.12.0",
     "rollup-plugin-serve": "2.0.2",
     "rollup-plugin-terser": "7.0.2",
     "rollup-plugin-visualizer": "5.9.0",
