--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -36,19 +36,14 @@ jobs:
       - name: Build and sync files to S3
         env:
           HUSKY: 0
+          BUGSNAG_API_KEY: ${{ secrets.RS_PROD_BUGSNAG_API_KEY }}
+          BUGSNAG_RELEASE_STAGE: 'production'
         run: |
           npm ci
           npm run build:browser
           npm run build:browser:modern
           npm run build:integration:all
           npm run build:integration:all:modern
-
-      - name: Fix Bugsnag API key
-        env:
-          BUGSNAG_API_KEY: ${{ secrets.RS_PROD_BUGSNAG_API_KEY }}
-        run: |
-          sed -i -e 's|{{RS_BUGSNAG_API_KEY}}|'$BUGSNAG_API_KEY'|' dist/legacy/rudder-analytics.min.js
-          sed -i -e 's|{{RS_BUGSNAG_API_KEY}}|'$BUGSNAG_API_KEY'|' dist/modern/rudder-analytics.min.js
 
       - name: Get new version number
         run: |
