ci(monorepo): fix test sonar configuration

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.log.level=INFO
-sonar.verbose=false
+sonar.log.level=DEBUG
+sonar.verbose=true
 sonar.qualitygate.wait=false
 
 # Project details
@@ -13,9 +13,9 @@ sonar.links.scm=https://github.com/rudderlabs/rudder-sdk-js
 sonar.links.issue=https://github.com/rudderlabs/rudder-sdk-js/issues
 
 # Path to reports
-sonar.javascript.lcov.reportPaths=packages/**/reports/coverage/lcov.info
-sonar.testExecutionReportPaths=packages/**/reports/sonar/results-report.xml
-sonar.eslint.reportPaths=packages/**/reports/eslint.json
+sonar.javascript.lcov.reportPaths=packages/analytics-js/reports/coverage/lcov.info,packages/analytics-js-plugins/reports/coverage/lcov.info,packages/analytics-v1.1/reports/coverage/lcov.info
+sonar.testExecutionReportPaths=packages/analytics-js/reports/sonar/results-report.xml,packages/analytics-js-plugins/reports/sonar/results-report.xml,packages/analytics-v1.1/reports/sonar/results-report.xml
+sonar.eslint.reportPaths=packages/analytics-js/reports/eslint.json,packages/analytics-js-plugins/reports/eslint.json,packages/analytics-v1.1/reports/eslint.json
 
 # Path to sources
 sonar.sources=packages
