--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "build:npm:modern": "lerna run build:npm:modern",
     "build:worker": "lerna run build:worker",
     "build:package": "lerna run build:package",
-    "test": "lerna run test",
+    "test": "lerna run --concurrency 1 test",
     "test:ci": "lerna run test:ci",
     "check:lint": "lerna run check:lint",
     "check:size": "lerna run check:size",
+    "check:size:build": "lerna run check:size:build",
     "check:circular": "lerna run check:circular",
     "check:support": "NODE_ENV=production npx browserslist --mobile-to-desktop",
     "check:support:modern": "NODE_ENV=modern npx browserslist --mobile-to-desktop",
@@ -28,7 +29,7 @@
     "format": "prettier --write .",
     "lint:fix": "eslint . --fix",
     "prepare": "husky install",
-    "pre-commit": "npm run test && npm run check:size && npx lint-staged",
+    "pre-commit": "npm run test && npm run check:size:build && npx lint-staged",
     "commit-msg": "commitlint --edit",
     "commit": "git-cz",
     "release": "npx standard-version",
