ci(monorepo): remove verbose output from sonat scan

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.log.level=DEBUG
-sonar.verbose=true
+sonar.log.level=INFO
+sonar.verbose=false
 sonar.qualitygate.wait=false
 
 # Project details
