--- a/packages/analytics-js/package.json
+++ b/packages/analytics-js/package.json
@@ -132,6 +132,7 @@
     "rollup-plugin-copy": "3.4.0",
     "rollup-plugin-dts": "5.3.0",
     "rollup-plugin-exclude-dependencies-from-bundle": "1.1.23",
+    "rollup-plugin-external-globals": "0.7.3",
     "rollup-plugin-filesize": "10.0.0",
     "rollup-plugin-generate-html-template": "1.7.0",
     "rollup-plugin-livereload": "2.0.5",
