--- a/packages/analytics-js/tsconfig.json
+++ b/packages/analytics-js/tsconfig.json
@@ -4,5 +4,10 @@
     "target": "es5",
     "declarationDir": "./dist/dts"
   },
-  "include": ["./package.json", "./src/**/*", "../../types/**/*"]
+  "include": [
+    "./package.json",
+    "./src/**/*",
+    "../../types/**/*",
+    "../analytics-js-plugins/src/**/*"
+  ]
 }
