feat: config manager (#990)
* feat: config manager

* feat: config manager

* feat: config manager utilities and test cases

* test: updated test cases

* test: unit test cases

* chore: code comment added

* chore: adress review comments

* chore: adress review comments

* chore: pr comment addressed

* chore: validate sourceConfig response

* Update packages/analytics-js/src/components/utilities/url.ts

Co-authored-by: Sai Kumar Battinoju <88789928+saikumarrs@users.noreply.github.com>

* Update packages/analytics-js/src/components/configManager/util/validate.ts

Co-authored-by: Sai Kumar Battinoju <88789928+saikumarrs@users.noreply.github.com>

* Update packages/analytics-js/src/components/configManager/util/dataPlaneResolver.ts

Co-authored-by: Sai Kumar Battinoju <88789928+saikumarrs@users.noreply.github.com>

* Update packages/analytics-js/src/components/configManager/util/cdnPaths.ts

Co-authored-by: Sai Kumar Battinoju <88789928+saikumarrs@users.noreply.github.com>

* chore: accept string as source config response

* test: update test case

* Update packages/analytics-js/__tests__/components/configManager/ConfigManager.test.ts

Co-authored-by: Sai Kumar Battinoju <88789928+saikumarrs@users.noreply.github.com>

* Update packages/analytics-js/src/components/configManager/ConfigManager.ts

Co-authored-by: Sai Kumar Battinoju <88789928+saikumarrs@users.noreply.github.com>

* Update packages/analytics-js/__tests__/components/configManager/ConfigManager.test.ts

Co-authored-by: Sai Kumar Battinoju <88789928+saikumarrs@users.noreply.github.com>

* Update packages/analytics-js/__tests__/components/configManager/validate.test.ts

Co-authored-by: Sai Kumar Battinoju <88789928+saikumarrs@users.noreply.github.com>

* test: updated test cases

* chore: added more validation

* chore: addressed comments

* chore: addressed comments

* chore: validation method added

* test: update test case

* test: update

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "build:npm:modern": "lerna run build:npm:modern",
     "build:worker": "lerna run build:worker",
     "build:package": "lerna run build:package",
-    "test": "lerna run test",
-    "test:ci": "lerna run test:ci --concurrency 1",
+    "test": "lerna run --concurrency 1 test",
+    "test:ci": "lerna run  --concurrency 1 test:ci",
     "check:lint": "lerna run check:lint",
     "check:size": "lerna run check:size",
     "check:size:build": "lerna run check:size:build",
