--- a/packages/sanity-suite/package.json
+++ b/packages/sanity-suite/package.json
@@ -51,7 +51,7 @@
     "@rudderstack/analytics-js": "*",
     "deep-equal": "2.2.0",
     "object-path": "0.11.8",
-    "rudder-sdk-js": "^2.31.0"
+    "rudder-sdk-js": "2.32.0"
   },
   "devDependencies": {
     "@babel/core": "7.21.4",
