--- a/packages/npm/package.json
+++ b/packages/npm/package.json
@@ -14,6 +14,10 @@
       "types": "./service-worker/index.d.ts",
       "import": "./service-worker/index.es.js",
       "require": "./service-worker/index.js"
+    },
+    "./service-worker/index.es": {
+      "types": "./service-worker/index.d.ts",
+      "import": "./service-worker/index.es.js"
     }
   },
   "typesVersions": {
