--- a/sanity-suite/package.json
+++ b/sanity-suite/package.json
@@ -27,7 +27,7 @@
   "dependencies": {
     "deep-equal": "^2.2.0",
     "object-path": "^0.11.8",
-    "rudder-sdk-js": "*"
+    "rudder-sdk-js": "2.32.0"
   },
   "devDependencies": {
     "@babel/core": "7.20.7",
