--- a/sanity-suite/package.json
+++ b/sanity-suite/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rudder-analytics-js-sdk-sanity-suite",
-  "version": "2.22.3",
+  "version": "2.32.0",
   "description": "Sanity suite for testing JS SDK package",
   "main": "./dist/testBook.js",
   "scripts": {
@@ -27,7 +27,7 @@
   "dependencies": {
     "deep-equal": "^2.2.0",
     "object-path": "^0.11.8",
-    "rudder-sdk-js": "*"
+    "rudder-sdk-js": "2.32.0"
   },
   "devDependencies": {
     "@babel/core": "7.20.7",
