--- a/packages/analytics-js/package.json
+++ b/packages/analytics-js/package.json
@@ -64,6 +64,7 @@
   "dependencies": {
     "@lukeed/uuid": "2.0.1",
     "@preact/signals-core": "1.2.3",
+    "@segment/localstorage-retry": "1.3.0",
     "@types/component-emitter": "1.2.11",
     "@types/ramda": "0.28.23",
     "ramda": "0.29.0",
