feat: events service (#1000)
* chore: make sanity suite package private

* fix: include paths in tsconfig.json

* fix: eslint automatic fixable issues

* feat: add barebone structure for the events service

* feat: add timestamp utilities module

* feat: add necessary constants

* refactor: relocate events handler types

* feat: add more types for events

* feat: implement event creation for track

* feat: add barebone structure for the events service

* refactor: relocate events handler types

* feat: implement event creation for track

* feat: add page parameters state

* feat: add context and page parameters to events

* feat: major chunk of events handler service is ready

* chore: add missing todos

* fix: event method overloads type

* refactor: migrate events handler to event manager

* fix: add missing file

* refactor: move functions to utilities

* fix: add missing file

* refactor: formatting improvements

* refactor: remove redundant code

* refactor: to remove eslint warnings

* chore: add the todo again

* fix: failure to remove utm_ prefix

* fix: user id should be updated after setting prev id

* refactor: remove redundant type conversion

* refactor: add event factory

* fix: add missing file

* chore: refactor to use the application state

* refactor: convert to arrow functions

* chore: fix test match rules in global jest config

* feat: add type validation

* test: add unit tests for some utilities

* test: add more unit tests for checkForReservedElementsInObject function

* refactor: test script

* test: add unit tests for more utility methods

* chore: exclude non v3 packages from pre-commit hook

* test: add unit tests for getCommonEventData

* chore: fix cmd line args syntax

* refactor: combine multiple expect statements into one

* fix: return correct result from function

* test: add some unit tests for getMergedContext

* test: add more unit tests for 

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build:worker": "lerna run build:worker",
     "build:package": "lerna run build:package",
     "test": "lerna run --concurrency 1 test",
-    "test:ci": "lerna run  --concurrency 1 test:ci",
+    "test:ci": "lerna run --concurrency 1 test:ci",
     "check:lint": "lerna run check:lint",
     "check:size": "lerna run check:size",
     "check:size:build": "lerna run check:size:build",
@@ -29,7 +29,7 @@
     "format": "prettier --write .",
     "lint:fix": "eslint . --fix",
     "prepare": "husky install",
-    "pre-commit": "npm run test -- --concurrency 1 && npm run check:size:build && npx lint-staged",
+    "pre-commit": "npm run test -- --concurrency 1 --scope \"@rudderstack/analytics-js\" --scope \"@rudderstack/analytics-js-plugins\" && npm run check:size:build -- --scope \"@rudderstack/analytics-js\" --scope \"@rudderstack/analytics-js-plugins\" && npx lint-staged",
     "commit-msg": "commitlint --edit",
     "commit": "git-cz",
     "release": "npx standard-version",
