fix: replace rudderlabs.com with rudderstack.com

--- a/packages/sanity-suite/.env.example
+++ b/packages/sanity-suite/.env.example
@@ -1,7 +1,7 @@
 # Variables required for the example
 WRITE_KEY=
 DATAPLANE_URL=
-CONFIG_SERVER_HOST=https://api.rudderlabs.com
+CONFIG_SERVER_HOST=https://api.rudderstack.com
 DEST_SDK_BASE_URL=https://cdn.rudderlabs.com/v1.1/js-integrations/
 BUGSNAG_API_KEY=
 BUGSNAG_RELEASE_STAGE=
