fix: replace rudderlabs.com with rudderstack.com

--- a/sanity-suite/.env.example
+++ b/sanity-suite/.env.example
@@ -1,6 +1,6 @@
 # Variables required for the example
 WRITE_KEY=
 DATAPLANE_URL=
-CONFIG_SERVER_HOST=https://api.rudderlabs.com
+CONFIG_SERVER_HOST=https://api.rudderstack.com
 DEST_SDK_BASE_URL=https://cdn.rudderlabs.com/v1.1/js-integrations/
 CDN_VERSION_PATH=v1.1/
