chore: add saikumar as code owner

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,2 @@
-* @MoumitaM @bardisg
+* @saikumarrs @MoumitaM @bardisg
 /packages/analytics-v1.1/src/integrations/ @ItsSudip @shrouti1507 @sandeepdsvs
