--- a/package.json
+++ b/package.json
@@ -157,7 +157,8 @@
     "shelljs": "0.8.4",
     "trim-newlines": "3.0.1",
     "webpack": "5.76.0",
-    "xml2js": "0.5.0"
+    "xml2js": "0.5.0",
+    "yaml": "2.2.2"
   },
   "browserslist": {
     "production": [
