ci: add new env variables for sanity suite builds

--- a/.github/workflows/deploy-sanity-suite.yml
+++ b/.github/workflows/deploy-sanity-suite.yml
@@ -31,6 +31,8 @@ jobs:
       - name: Build
         env:
           WRITE_KEY: ${{ secrets.SANITY_SUITE_WRITE_KEY }}
+          FEATURE_PRELOAD_BUFFER_WRITE_KEY: ${{ secrets.SANITY_SUITE_FEATURE_PRELOAD_BUFFER_WRITE_KEY }}
+          FEATURE_EVENT_FILTERING_WRITE_KEY: ${{ secrets.SANITY_SUITE_FEATURE_EVENT_FILTERING_WRITE_KEY }}
           DATAPLANE_URL: ${{ secrets.SANITY_SUITE_DATAPLANE_URL }}
           CONFIG_SERVER_HOST: ${{ secrets.SANITY_SUITE_CONFIG_SERVER_HOST }}
           HUSKY: 0
