--- a/.eslintignore
+++ b/.eslintignore
@@ -12,6 +12,7 @@ cdnSDKv3.js
 *.d.ts
 *.config.js
 examples/chrome-extension/background-script/rudderAnalytics.js
+examples/chrome-extension/background-script-websockets/rudderAnalytics.js
 examples/chrome-extension/content-script/foreground.js
 testBookSuites/
 tsconfig.build.tsbuildinfo
