--- a/packages/analytics-js-service-worker/package.json
+++ b/packages/analytics-js-service-worker/package.json
@@ -1,20 +1,12 @@
 {
-  "name": "@rudderstack/analytics-js-plugins",
+  "name": "@rudderstack/analytics-js-service-worker",
   "version": "3.0.0",
-  "description": "RudderStack Javascript SDK plugins",
-  "main": "modern/cjs/index.js",
-  "module": "modern/esm/index.js",
+  "description": "RudderStack Javascript Service Worker SDK",
+  "main": "cjs/index.js",
+  "module": "esm/index.js",
   "exports": {
-    ".": {
-      "types": "./index.d.ts",
-      "require": "./modern/cjs/index.js",
-      "import": "./modern/esm/index.js"
-    },
-    "./legacy": {
-      "types": "./index.d.ts",
-      "require": "./legacy/cjs/index.js",
-      "import": "./legacy/esm/index.js"
-    }
+    "require": "./cjs/index.js",
+    "import": "./esm/index.js"
   },
   "typesVersions": {
     "*": {
@@ -24,7 +16,7 @@
     }
   },
   "publishConfig": {
-    "directory": "dist/npm"
+    "directory": "dist/"
   },
   "keywords": [
     "analytics",
@@ -35,45 +27,42 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rudderlabs/rudder-sdk-js.git",
-    "directory": "packages/analytics-js-plugins"
+    "directory": "packages/analytics-js-service-worker"
   },
   "bugs": {
     "url": "https://github.com/rudderlabs/rudder-sdk-js/issues"
   },
   "homepage": "https://github.com/rudderlabs/rudder-sdk-js/blob/master/README.md",
   "scripts": {
-    "clean": "rimraf -rf ./dist  && rimraf -rf ./node_modules/.cache && rimraf tsconfig.build.tsbuildinfo",
-    "start": "rollup -c --watch --environment DEV_SERVER,PROD_DEBUG",
-    "build": "npm run build:browser",
-    "build:browser:modern": "BROWSERSLIST_ENV=modern npm run build:browser",
-    "build:browser": "rollup -c --environment VERSION:$npm_package_version,UGLIFY,PROD_DEBUG,STAGING:$npm_config_staging,ENV:prod",
-    "build:npm": "exit 0",
-    "build:npm:modern": "BROWSERSLIST_ENV=modern npm run build:npm",
-    "build:package": "npm run build:npm:modern && npm run build:npm",
-    "test": "jest --watchAll=false --detectOpenHandles --forceExit --maxWorkers=50% --coverage",
-    "test:ci": "jest --watchAll=false --detectOpenHandles --forceExit --maxWorkers=2 --coverage",
+    "clean": "rimraf -rf ./dist && rimraf -rf ./node_modules/.cache && rimraf tsconfig.build.tsbuildinfo",
+    "start": "rollup --config --watch --environment PROD_DEBUG",
+    "build": "rollup --config --environment VERSION:$npm_package_version,ENV:prod",
+    "test": "jest --watchAll=false --detectOpenHandles --forceExit --maxWorkers=50% --coverage --passWithNoTests",
+    "test:ci": "jest --watchAll=false --detectOpenHandles --forceExit --maxWorkers=2 --coverage --passWithNoTests",
     "check:lint:dev": "eslint --ext .js,.ts src",
     "check:lint": "eslint --ext .js,.ts src -f json -o reports/eslint.json || exit 0",
-    "check:size:build": "npm run clean && npm run build:browser:modern && npm run build:package",
+    "check:size:build": "npm run clean && npm run build",
     "check:size": "npm run check:size:build && size-limit",
     "check:circular": "madge --circular --extensions js,ts src || exit 0",
     "check:support": "NODE_ENV=production npx browserslist --mobile-to-desktop",
-    "check:support:modern": "NODE_ENV=modern npx browserslist --mobile-to-desktop",
     "check:duplicates": "jscpd src",
     "check:security": "npm audit --recursive --audit-level=high",
-    "start:modern": "BROWSERSLIST_ENV=modern npm run start",
-    "build:modern": "npm run build:browser:modern",
-    "package": "exit 0",
-    "release": "exit 0"
+    "package": "cd dist && rimraf -rf ./dts && npm pack --pack-destination ../",
+    "release": "npm publish"
   },
   "engines": {
     "node": ">=v16"
   },
   "dependencies": {
     "@lukeed/uuid": "2.0.1",
-    "@preact/signals-core": "1.3.0",
-    "crypto-js": "4.1.1",
-    "ramda": "0.29.0"
+    "@segment/loosely-validate-event": "2.0.0",
+    "@vespaiach/axios-fetch-adapter": "0.3.1",
+    "assert": "2.0.0",
+    "axios": "0.27.2",
+    "axios-retry": "3.4.0",
+    "lodash.clonedeep": "4.5.0",
+    "lodash.isstring": "4.0.1",
+    "ms": "2.1.3"
   },
   "devDependencies": {
     "@babel/core": "7.21.8",
@@ -96,11 +85,10 @@
     "@rollup/plugin-terser": "0.4.1",
     "@size-limit/file": "8.2.4",
     "@size-limit/webpack": "8.2.4",
-    "@types/component-emitter": "1.2.11",
-    "@types/crypto-js": "4.1.1",
     "@types/jest": "29.5.1",
+    "@types/lodash.clonedeep": "4.5.7",
+    "@types/lodash.isstring": "4.0.7",
     "@types/ramda": "0.29.1",
-    "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "5.59.6",
     "@typescript-eslint/parser": "5.59.6",
     "assert": "2.0.0",
@@ -141,6 +129,7 @@
     "rollup-plugin-copy": "3.4.0",
     "rollup-plugin-dts": "5.3.0",
     "rollup-plugin-exclude-dependencies-from-bundle": "1.1.23",
+    "rollup-plugin-external-globals": "0.8.0",
     "rollup-plugin-filesize": "10.0.0",
     "rollup-plugin-generate-html-template": "1.7.0",
     "rollup-plugin-livereload": "2.0.5",
@@ -164,10 +153,6 @@
       "Chrome >= 37",
       "Safari >= 7",
       "Opera >= 23"
-    ],
-    "modern": [
-      "defaults",
-      "supports es6-module-dynamic-import"
     ],
     "development": [
       "last 1 chrome version",
