--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,7 +15,7 @@ sonar.links.issue=https://github.com/rudderlabs/rudder-sdk-js/issues
 # Path to reports
 sonar.javascript.lcov.reportPaths=packages/analytics-js/reports/coverage/lcov.info,packages/analytics-js-plugins/reports/coverage/lcov.info,packages/analytics-v1.1/reports/coverage/lcov.info
 sonar.testExecutionReportPaths=packages/analytics-js/reports/sonar/results-report.xml,packages/analytics-js-plugins/reports/sonar/results-report.xml,packages/analytics-v1.1/reports/sonar/results-report.xml
-sonar.eslint.reportPaths=packages/analytics-js/reports/eslint.json,packages/analytics-js-plugins/reports/eslint.json,packages/analytics-v1.1/reports/eslint.json
+sonar.eslint.reportPaths=packages/analytics-js/reports/eslint.json,packages/analytics-js-plugins/reports/eslint.json,packages/analytics-v1.1/reports/eslint.json,packages/analytics-js-service-worker/reports/eslint.json
 
 # Path to sources
 sonar.sources=packages
