ci: fix branch name in v3 beta deployment action

--- a/.github/workflows/deploy-beta-v3.yml
+++ b/.github/workflows/deploy-beta-v3.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Extract feature name from branch
         shell: bash
         # run: echo "branch=$(echo ${GITHUB_REF#refs/heads/beta})" >>$GITHUB_OUTPUT  # TODO: change value to this one
-        run: echo "branch=v3 >>$GITHUB_OUTPUT
+        run: echo "branch=v3" >>$GITHUB_OUTPUT
         id: extract_branch
 
       - name: Configure AWS Credentials
