--- a/.github/workflows/build-and-quality-checks-v3.yml
+++ b/.github/workflows/build-and-quality-checks-v3.yml
@@ -43,3 +43,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           build_script: check:size
+          script: check:size:json
