--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "setup": "npx lerna bootstrap && lerna run build && lerna link",
     "clean": "lerna clean --yes && lerna run --concurrency 1 clean && git clean -xdf node_modules",
     "clean:cache": "lerna clean --yes && rimraf -rf ./node_modules/.cache",
-    "start": "lerna run start",
+    "start": "lerna run start --scope \"@rudderstack/analytics-js\" --scope \"@rudderstack/analytics-js-plugins\"",
+    "start:modern": "lerna run start:modern --scope \"@rudderstack/analytics-js\" --scope \"@rudderstack/analytics-js-plugins\"",
     "build": "lerna run build",
     "build:browser": "lerna run build:browser",
     "build:browser:modern": "lerna run build:browser:modern",
