feat: dataplane events queue (#1088)
* feat: initial version of dataplane events queue

* refactor: imports order

* chore(ci): update size limits

* refactor: start and enqueue methods of the plugin

* feat: update localstorage retry module to send retry status

* fix: init method of retry queue plugin

* fix: add missing types

* feat: implemented xhr queue

* refactor: data plane events delivery queues

* fix: invocation parameters in event repository

* feat: add support to send retry attemps info

* refactor: update log message

* chore: increase size limit of federated plugins

* refactor: make dataplane events delivery plugins stateless

* refactor: remove cyclic dependency

* chore: fix code smell

* test: add unit test for getDeliveryPayload utility method

* test: add unit tests for getNormalizedQueueOptions utility method

* test: add unit tests for getDeliveryUrl utility method

* test: add unit tests for validatePayloadSize utility method

* chore: add comments

* chore: fix size-limit check scripts for packages

* chore: fix 'script' input

* chore(ci): restrict scope of npm scripts to necessary packages

* chore(ci): comment unwanted steps for now

* test: add unit tests for xhrQueue plugin utility method

* chore(ci): update sonar project file

* chore(ci): use the correct build script for size-limit check

* chore: add start:modern npm script

* chore: update the static html start page

* fix: replace Buffer with btoa

* fix: use proper logic for filtering dataplane plugins

* refactor: remove start extension point on dataplane plugins

* feat: add sendRawData request option

* refactor: formatting improvements

* feat: process buffered events

--- a/.github/workflows/build-and-quality-checks-v3.yml
+++ b/.github/workflows/build-and-quality-checks-v3.yml
@@ -29,8 +29,8 @@ jobs:
 
       - name: Execute quality checks
         run: |
-          npm run check:circular
-          npm run check:duplicates
+          npm run check:circular -- --scope '@rudderstack/analytics-js' --scope '@rudderstack/analytics-js-plugins'
+          npm run check:duplicates -- --scope '@rudderstack/analytics-js' --scope '@rudderstack/analytics-js-plugins'
 
       - name: Execute security checks
         run: |
@@ -42,4 +42,5 @@ jobs:
           HUSKY: 0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          build_script: check:size
+          build_script: check:size:build
+          script: npm run check:size:json -- --scope '@rudderstack/analytics-js' --scope '@rudderstack/analytics-js-plugins'
