--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "setup": "npx lerna bootstrap && lerna run build && lerna link",
     "clean": "lerna clean --yes && lerna run --concurrency 1 clean && git clean -xdf node_modules",
     "clean:cache": "lerna clean --yes && rimraf -rf ./node_modules/.cache",
-    "start": "lerna run start",
+    "start": "lerna run start --scope \"@rudderstack/analytics-js\" --scope \"@rudderstack/analytics-js-plugins\"",
+    "start:modern": "lerna run start:modern --scope \"@rudderstack/analytics-js\" --scope \"@rudderstack/analytics-js-plugins\"",
     "build": "lerna run build",
     "build:browser": "lerna run build:browser",
     "build:browser:modern": "lerna run build:browser:modern",
@@ -20,8 +21,9 @@
     "test": "lerna run --concurrency 1 test",
     "test:ci": "lerna run --concurrency 1 test:ci",
     "check:lint": "lerna run check:lint",
-    "check:size": "lerna run check:size",
-    "check:size:build": "lerna run check:size:build",
+    "check:size": "lerna run check:size --scope \"@rudderstack/analytics-js\" --scope \"@rudderstack/analytics-js-plugins\"",
+    "check:size:build": "lerna run check:size:build --scope \"@rudderstack/analytics-js\" --scope \"@rudderstack/analytics-js-plugins\"",
+    "check:size:json": "lerna run check:size:json",
     "check:circular": "lerna run check:circular",
     "check:support": "NODE_ENV=production npx browserslist --mobile-to-desktop",
     "check:support:modern": "NODE_ENV=modern npx browserslist --mobile-to-desktop",
