--- a/packages/analytics-js/package.json
+++ b/packages/analytics-js/package.json
@@ -43,11 +43,11 @@
   "homepage": "https://github.com/rudderlabs/rudder-sdk-js/blob/master/README.md",
   "scripts": {
     "clean": "rimraf -rf ./dist && rimraf -rf ./node_modules/.cache && rimraf tsconfig.build.tsbuildinfo",
-    "start": "ONLY_IIFE=true rollup --config --watch --environment DEV_SERVER,PROD_DEBUG",
+    "start": "ONLY_IIFE=true rollup -c --watch --environment DEV_SERVER,PROD_DEBUG",
     "build": "npm run build:browser && npm run build:package",
     "build:browser:modern": "BROWSERSLIST_ENV=modern npm run build:browser",
-    "build:browser": "rollup --config --environment VERSION:$npm_package_version,UGLIFY,PROD_DEBUG,ENV:prod",
-    "build:npm": "rollup --config --environment VERSION:$npm_package_version,ENV:prod",
+    "build:browser": "rollup -c --environment VERSION:$npm_package_version,UGLIFY,PROD_DEBUG,ENV:prod",
+    "build:npm": "rollup -c --environment VERSION:$npm_package_version,ENV:prod",
     "build:npm:modern": "BROWSERSLIST_ENV=modern npm run build:npm",
     "build:package": "npm run build:npm:modern && npm run build:npm",
     "build:browser:test": "ONLY_IIFE=true npm run build:browser && sed 's/var rudderanalytics/rudderanalytics/g' dist/cdn/legacy/iife/rudder-analytics.min.js > __mocks__/cdnSDKv3.js",
