--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "check:lint": "lerna run check:lint",
     "check:size": "lerna run check:size --scope \"@rudderstack/analytics-js\" --scope \"@rudderstack/analytics-js-plugins\"",
     "check:size:build": "lerna run check:size:build --scope \"@rudderstack/analytics-js\" --scope \"@rudderstack/analytics-js-plugins\"",
-    "check:size:json": "lerna run check:size:json",
+    "check:size:json": "lerna run check:size:json --scope \"@rudderstack/analytics-js\" --scope \"@rudderstack/analytics-js-plugins\"",
     "check:circular": "lerna run check:circular",
     "check:support": "NODE_ENV=production npx browserslist --mobile-to-desktop",
     "check:support:modern": "NODE_ENV=modern npx browserslist --mobile-to-desktop",
