chore: add a new setup script for ci

--- a/.github/workflows/build-and-quality-checks-v3.yml
+++ b/.github/workflows/build-and-quality-checks-v3.yml
@@ -25,7 +25,7 @@ jobs:
           HUSKY: 0
         run: |
           npm ci
-          npm run setup
+          npm run setup:ci
 
       - name: Execute quality checks
         run: |
