--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   ],
   "scripts": {
     "setup": "npx lerna bootstrap && lerna run build && lerna link",
+    "setup:ci": "lerna bootstrap && lerna link",
     "clean": "lerna clean --yes && lerna run --concurrency 1 clean && git clean -xdf node_modules",
     "clean:cache": "lerna clean --yes && rimraf -rf ./node_modules/.cache",
     "start": "lerna run start --scope \"@rudderstack/analytics-js\" --scope \"@rudderstack/analytics-js-plugins\"",
